--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UnityOne</title>
+    <title>Logistix Global Express Delivery Global Express Courier</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -34,7 +34,7 @@
             <div class="toggler">
               <span class="toggle"></span>
             </div>
-            <a href="./index.html">
+            <a href="index.html">
               <%= image_tag "img/logo-pink.svg", class:"img-fluid mt-2 mt-md-0", alt:"logo" %>
               <!-- <img
                 src="./img/logo-pink.svg"
@@ -69,6 +69,14 @@
                   >Contact</a
                 >
               </li>
+              <% if user_signed_in? %>
+                <li class="nav-item pl-1">
+                  <%= link_to "Shipments", shipments_path, class: "nav-link nav-link1" %>
+                </li>
+                <li class="nav-item pl-1">
+                  <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link nav-link1" %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </nav>
@@ -111,13 +119,6 @@
           <li class="nav-item current">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
-
-          <li class="nav-item">
-            <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
-          </li>
         </ul>
       </div>
     </header>
@@ -132,12 +133,12 @@
         <div class="row">
           <div class="col-md-6">
             <img
-              src="./img/logo-white.svg"
+              src="img/logo-white.svg"
               class="img-fluid mt-2 mb-4"
               alt="logo"
             />
             <p class="footer-text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
               industrial company. We are currently available in 26 African
               countries, giving the best of the best services through our well
