--- a/app/views/shipments/index.html.erb
+++ b/app/views/shipments/index.html.erb
@@ -44,8 +44,12 @@
 
               <br>
 
-              <%= link_to 'New Shipment', new_shipment_path, class: "btn btn-danger" %>
 
+              <% if !user_signed_in? %>
+                <%= link_to 'Login', new_user_session_path, class: "btn btn-danger" %>
+              <% else %>
+                <%= link_to 'New Shipment', new_shipment_path, class: "btn btn-danger" %>
+              <% end %>
                <div class="clearfix"></div>
             </div>
         </div>
