--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -140,7 +140,7 @@
             <p class="footer-text">
               Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
-              industrial company. We are currently available in 26 African
+              industrial company. We are currently available in 26
               countries, giving the best of the best services through our well
               trained staffs.
             </p>
