--- a/app/views/shipments/index.html.erb
+++ b/app/views/shipments/index.html.erb
@@ -45,10 +45,10 @@
               <br>
 
 
-              <% if !user_signed_in? %>
-                <%= link_to 'Login', new_user_session_path, class: "btn btn-danger" %>
-              <% else %>
+              <% if user_signed_in? %>
                 <%= link_to 'New Shipment', new_shipment_path, class: "btn btn-danger" %>
+              <% else %>
+                <%= link_to 'Login', new_user_session_path, class: "btn btn-danger" %>
               <% end %>
                <div class="clearfix"></div>
             </div>
