--- a/app/views/shipments/show.pdf.erb
+++ b/app/views/shipments/show.pdf.erb
@@ -25,7 +25,7 @@
 
         h6 {
           margin: 2px 0;
-          font-family: 'Montesserat', cursive;
+          font-family: 'Verdana', cursive;
         }
 
         h2 {
@@ -34,7 +34,7 @@
 
         address {
           font-size: 1.3rem;
-          font-family: 'Tahoma MS', cursive;
+          font-family: 'Verdana', cursive;
           font-weight: bolder;
         }
     </style>
@@ -88,7 +88,6 @@
           <%= image_tag wicked_pdf_asset_base64('img/paid.jpg') %>
         </div>
       <%= image_tag wicked_pdf_asset_base64('barcode.png') %>
-      <%#= wicked_pdf_image_tag "https://img2.pngio.com/barcode-design-element-transparent-png-svg-vector-file-barcode-design-png-512_512.png" %>
       <%= yield %>
     </div>
   </body>
