--- a/app/views/shipments/show.pdf.erb
+++ b/app/views/shipments/show.pdf.erb
@@ -44,7 +44,7 @@
     </div>
     <address class="text-center">
       <strong>
-        <small>Email: infologistixsexpress@aol.com</small> <br>
+        <small>Email: info@logistixglobalexpress.com</small> <br>
         <small>Phone: +44 736 561 9844</small> <br>
         <small>Web: https://www.logistixglobalexpress.com</small> <br>
       </strong>
